unpackaged/main/default/objects/Case/fields/Sub_Type_Text__c.field-meta.xml
<CustomField>
    <fullName>Sub_Type_Text__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sub Type</label>
    <length>25</length>
    <type>Text</type>
</CustomField>