unpackaged/main/default/objects/Case/fields/Supplied_Web_Phone__c.field-meta.xml
<CustomField>
    <fullName>Supplied_Web_Phone__c</fullName>
    <description>Using this field in the trigger and populate SuppliedPhone&#39; value in it to use as mobile / direct call option in SF</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Web Phone</label>
    <type>Phone</type>
</CustomField>