unpackaged/main/default/objects/Case/fields/System_Case_Pending_Alert__c.field-meta.xml
<CustomField>
    <fullName>System_Case_Pending_Alert__c</fullName>
    <description>use in casependingalert lightning component</description>
    <formula>AND(
$RecordType.Name = &#39;GX360 Survey&#39;,
 Not(Case_handled_in_SFDC_flag__c),
 OR(Medallia_Alert_Status__c =&#39;In Progress&#39;,
    Medallia_Alert_Status__c =&#39;Overdue&#39;,
    Medallia_Alert_Status__c =&#39;Escalated&#39;,
    Medallia_Alert_Status__c =&#39;Escalated Level Two&#39;
   ) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>System Case Pending Alert</label>
    <type>Checkbox</type>
</CustomField>