unpackaged/main/default/objects/Case/fields/System_Contact_First_Name__c.field-meta.xml
<CustomField>
    <fullName>System_Contact_First_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>System Contact First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>