unpackaged/main/default/objects/Case/fields/System_Contact_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>System_Contact_Last_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>System Contact Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>