unpackaged/main/default/objects/Case/fields/System_Contact_Tier__c.field-meta.xml
<CustomField>
    <fullName>System_Contact_Tier__c</fullName>
    <description>using this in Batch class</description>
    <formula>IF( ISBLANK( Text(Contact.Tier_Name__c) ), &#39;Premier&#39;, Text(Contact.Tier_Name__c) )</formula>
    <label>Customer/Guest Tier</label>
    <type>Text</type>
</CustomField>