unpackaged/main/default/objects/Case/fields/System_Location_Phone__c.field-meta.xml
<CustomField>
    <fullName>System_Location_Phone__c</fullName>
    <formula>Location__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>System Location Phone</label>
    <type>Text</type>
</CustomField>