unpackaged/main/default/objects/Case/fields/System_Profile_Name__c.field-meta.xml
<CustomField>
    <fullName>System_Profile_Name__c</fullName>
    <formula>$Profile.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>System Profile Name</label>
    <type>Text</type>
</CustomField>