unpackaged/main/default/objects/Case/fields/System_Reason_For_Contact_Association__c.field-meta.xml
<CustomField>
    <fullName>System_Reason_For_Contact_Association__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>System Reason For Contact Association</label>
    <length>255</length>
    <type>Text</type>
</CustomField>