unpackaged/main/default/objects/Case/fields/System_Status_Text__c.field-meta.xml
<CustomField>
    <fullName>System_Status_Text__c</fullName>
    <formula>text(Status)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>System Status Text</label>
    <type>Text</type>
</CustomField>