unpackaged/main/default/objects/Case/fields/System_Time_Difference_In_Mintues__c.field-meta.xml
<CustomField>
    <fullName>System_Time_Difference_In_Mintues__c</fullName>
    <formula>IF(
NOT(ISBLANK(Status_Updated_Time__c)),  
(Now() - Status_Updated_Time__c  )*24*60,0)</formula>
    <label>System Time Difference In Minutes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>