unpackaged/main/default/objects/Case/fields/System_W2C_Website__c.field-meta.xml
<CustomField>
    <fullName>System_W2C_Website__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>System W2C Website</label>
    <length>255</length>
    <type>Text</type>
</CustomField>