unpackaged/main/default/objects/Case/fields/System_When_Last_Send_to_Medallia__c.field-meta.xml
<CustomField>
    <fullName>System_When_Last_Send_to_Medallia__c</fullName>
    <description>Just to keep information and tracking that when last time send any update on the case to Medallia.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>System When Last Send to Medallia</label>
    <type>DateTime</type>
</CustomField>