unpackaged/main/default/objects/Case/fields/Unity_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Unity_Account_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Unity Account Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>