unpackaged/main/default/objects/Case/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>