unpackaged/main/default/objects/Case/recordTypes/E_Commerce.recordType-meta.xml
<RecordType>
    <fullName>E_Commerce</fullName>
    <active>true</active>
    <businessProcess>Support Process E-Commerce</businessProcess>
    <label>E-Commerce</label>
</RecordType>