unpackaged/main/default/objects/Case/recordTypes/GX360_Survey.recordType-meta.xml
<RecordType>
    <fullName>GX360_Survey</fullName>
    <active>true</active>
    <businessProcess>Support Process GX360</businessProcess>
    <label>GX360 Survey</label>
</RecordType>