unpackaged/main/default/objects/Case/recordTypes/Loyalty.recordType-meta.xml
<RecordType>
    <fullName>Loyalty</fullName>
    <active>true</active>
    <businessProcess>Support Process Loyalty</businessProcess>
    <label>Loyalty</label>
</RecordType>