unpackaged/main/default/objects/Case/recordTypes/Other.recordType-meta.xml
<RecordType>
    <fullName>Other</fullName>
    <active>true</active>
    <businessProcess>Support Process Other</businessProcess>
    <label>Other</label>
</RecordType>