unpackaged/main/default/objects/Case/recordTypes/Service.recordType-meta.xml
<RecordType>
    <fullName>Service</fullName>
    <active>true</active>
    <businessProcess>Support Process Service</businessProcess>
    <label>Service</label>
</RecordType>