unpackaged/main/default/objects/Case/validationRules/ActionTaken_Value_Validation_rule.validationRule-meta.xml
<ValidationRule>
    <fullName>ActionTaken_Value_Validation_rule</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
OR(
INCLUDES(Action_Taken__c, &#39;Appeasement: Comp Dollars&#39;),
INCLUDES(Action_Taken__c, &#39;Appeasement: Room+&#39;),
INCLUDES(Action_Taken__c, &#39;Appeasement: Room&#39;)), 
ISBLANK(Value__c),
$User.Id &lt;&gt; $Label.Medallia_Integration_User_Id)</errorConditionFormula>
    <errorDisplayField>Value__c</errorDisplayField>
    <errorMessage>Value is required for the selected Action Taken</errorMessage>
</ValidationRule>