unpackaged/main/default/objects/Case/validationRules/Case_cannot_be_closed_without_Reason1.validationRule-meta.xml
<ValidationRule>
    <fullName>Case_cannot_be_closed_without_Reason1</fullName>
    <active>true</active>
    <description>Jira#: 95 &quot;Ability for the System to restrict closing out a case when Reason field is not defined.&quot; This validation should work for all profiles except system admins, considering the fact that they may bulk close the cases. 00e4x000001VLdrAAG = System Adm</description>
    <errorConditionFormula>AND( 
     ISPICKVAL(Status, &quot;Closed&quot;),
     ISBLANK(Reason_Text__c),
     $RecordType.Name &lt;&gt; &quot;GX360 Survey&quot;,
				 ISBLANK(MSD_External_ID__c)
)</errorConditionFormula>
    <errorDisplayField>Reason_Text__c</errorDisplayField>
    <errorMessage>Reason is required to close the case</errorMessage>
</ValidationRule>