unpackaged/main/default/objects/Case/validationRules/Case_cannotbe_closed_without_Location.validationRule-meta.xml
<ValidationRule>
    <fullName>Case_cannotbe_closed_without_Location</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
     ISPICKVAL(Status, &quot;Closed&quot;), 
    /* $RecordType.Name = &quot;GX360 Survey&quot;,*/
     IsBlank( Location__c ),
     $User.Id  &lt;&gt;  $Label.Medallia_Integration_User_Id,
				ISBLANK(MSD_External_ID__c)
)</errorConditionFormula>
    <errorDisplayField>Location__c</errorDisplayField>
    <errorMessage>Location is required to close the case</errorMessage>
</ValidationRule>