unpackaged/main/default/objects/Case/validationRules/Case_cannotbe_closed_without_ProblemArea.validationRule-meta.xml
<ValidationRule>
    <fullName>Case_cannotbe_closed_without_ProblemArea</fullName>
    <active>true</active>
    <description>Jira#: 95 &quot;Ability for the System to restrict closing out a case when Reason field is not defined.&quot; This validation should work for all profiles except system admins, considering the fact that they may bulk close the cases. 00e4x000001VLdrAAG = System Adm</description>
    <errorConditionFormula>AND(
ISPICKVAL(Status, &quot;Closed&quot;),
IsBlank(Problem_Area__c),
$RecordType.Name &lt;&gt; &quot;E-Commerce&quot;,
$RecordType.Name &lt;&gt; &quot;Loyalty&quot;,
$RecordType.Name &lt;&gt; &quot;Other&quot;,
$User.Id  &lt;&gt; $Label.Medallia_Integration_User_Id,
				ISBLANK(MSD_External_ID__c)
)</errorConditionFormula>
    <errorDisplayField>Problem_Area__c</errorDisplayField>
    <errorMessage>Problem Area is required to close the case</errorMessage>
</ValidationRule>