unpackaged/main/default/objects/Case/validationRules/Case_cannotbe_closed_without_Resolution1.validationRule-meta.xml
<ValidationRule>
    <fullName>Case_cannotbe_closed_without_Resolution1</fullName>
    <active>true</active>
    <description>Jira#: 95 &quot;Ability for the System to restrict closing out a case when Reason field is not defined.&quot; This validation should work for all profiles except system admins, considering the fact that they may bulk close the cases. 00e4x000001VLdrAAG = System Adm</description>
    <errorConditionFormula>AND(
     ISPICKVAL(Status, &quot;Closed&quot;), 
     $RecordType.Name = &quot;Other&quot;,
     ISBLANK(Resolution_Text__c ),
				ISBLANK(MSD_External_ID__c)
)</errorConditionFormula>
    <errorDisplayField>Resolution_Text__c</errorDisplayField>
    <errorMessage>Resolution comments are required to close the case</errorMessage>
</ValidationRule>