unpackaged/main/default/objects/Case/validationRules/Case_cannotbe_closed_without_Resolution2.validationRule-meta.xml
<ValidationRule>
    <fullName>Case_cannotbe_closed_without_Resolution2</fullName>
    <active>true</active>
    <description>Jira#: 95 &quot;Ability for the System to restrict closing out a case when Reason field is not defined.&quot; This validation should work for all profiles except system admins, considering the fact that they may bulk close the cases. 00e4x000001VLdrAAG = System Adm</description>
    <errorConditionFormula>AND(
     ISPICKVAL(Status, &quot;Closed&quot;), 
     $RecordType.Name &lt;&gt; &quot;Other&quot;,
     $RecordType.Name &lt;&gt; &quot;GX360 Survey&quot;,
     $RecordType.Name &lt;&gt; &quot;Service&quot;,
     ISBLANK( Text(Resolution__c)),
				ISBLANK(MSD_External_ID__c)
)</errorConditionFormula>
    <errorDisplayField>Resolution__c</errorDisplayField>
    <errorMessage>Resolution is required to close the case</errorMessage>
</ValidationRule>