unpackaged/main/default/objects/Case/validationRules/Location_Requied_When_Status_Is_Changed.validationRule-meta.xml
<ValidationRule>
    <fullName>Location_Requied_When_Status_Is_Changed</fullName>
    <active>true</active>
    <description>Location is requied when status is changed by any agent.</description>
    <errorConditionFormula>AND($User.ProfileId = $Label.System_Agent_ProfileId,
NOT(ISPICKVAL(PRIORVALUE(Status),&quot;New&quot;)),
ISCHANGED(Status),
ISBLANK(Location__c) 
)</errorConditionFormula>
    <errorMessage>Location is required in order to change the case status.</errorMessage>
</ValidationRule>