unpackaged/main/default/objects/Case/validationRules/Medallia_Case_cannotbe_Edited_In_SFDC.validationRule-meta.xml
<ValidationRule>
    <fullName>Medallia_Case_cannotbe_Edited_In_SFDC</fullName>
    <active>true</active>
    <description>Those cases that are handled in Medallia, can not get change in SFDC.</description>
    <errorConditionFormula>AND(    
     $RecordType.Name = &quot;GX360 Survey&quot;,
     Case_handled_in_SFDC_flag__c = False,
     Not(ISNEW()) ,
     $User.Id  &lt;&gt;  $Label.Medallia_Integration_User_Id
)</errorConditionFormula>
    <errorMessage>This case is being handled in Medallia, so no updates can be made in Salesforce.</errorMessage>
</ValidationRule>