unpackaged/main/default/objects/Case/validationRules/Please_Select_The_Crisis_Detail.validationRule-meta.xml
<ValidationRule>
    <fullName>Please_Select_The_Crisis_Detail</fullName>
    <active>true</active>
    <description>If Crisis = True then the Crisis Detail (lookup) field should not be null</description>
    <errorConditionFormula>AND( Is_related_to_Crisis__c ==true, Crisis_Details__c ==null )</errorConditionFormula>
    <errorDisplayField>Crisis_Details__c</errorDisplayField>
    <errorMessage>Crisis Detail is required</errorMessage>
</ValidationRule>