unpackaged/main/default/objects/Case/validationRules/Web_To_Case_Reason_Is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Web_To_Case_Reason_Is_Required</fullName>
    <active>true</active>
    <description>HRSC3AP-485  Reason is required for web to case</description>
    <errorConditionFormula>AND(
				 ISPICKVAL(Origin,&#39;Web&#39;),
     ISPICKVAL(Reason,&#39;&#39;) 		  
			)</errorConditionFormula>
    <errorDisplayField>Reason</errorDisplayField>
    <errorMessage>Case reason is required for web-to-case</errorMessage>
</ValidationRule>