unpackaged/main/default/objects/Case/listViews/Dynamics_Cases.listView-meta.xml
<ListView>
    <fullName>Dynamics_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>MSD_Case_Number__c</columns>
    <columns>CASES.RECORDTYPE</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>MSD_External_ID__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Dynamics Cases</label>
</ListView>