unpackaged/main/default/objects/Case/listViews/Escalated_Cases.listView-meta.xml
<ListView>
    <fullName>Escalated_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>Location__c</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.ESCALATION_STATE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Escalated Cases</label>
</ListView>