unpackaged/main/default/objects/Case/listViews/Executive_Escalation.listView-meta.xml
<ListView>
    <fullName>Executive_Escalation</fullName>
    <columns>Is_Executive_Escalation__c</columns>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>Location_Number__c</columns>
    <columns>Location__c</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Executive_Escalation__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Executive Escalation</label>
</ListView>