unpackaged/main/default/objects/Case/listViews/Junk_Cases.listView-meta.xml
<ListView>
    <fullName>Junk_Cases</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Is_Junk_Case__c</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Junk_Case__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>OWNER_NAME</field>
        <operation>contains</operation>
        <value>Junk Queue</value>
    </filters>
    <label>Junk Cases</label>
</ListView>