unpackaged/main/default/objects/Case/listViews/Loyalty_Cases.listView-meta.xml
<ListView>
    <fullName>Loyalty_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.STATUS</columns>
    <columns>NAME</columns>
    <columns>Location__c</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.ORIGIN</columns>
    <columns>CASES.ESCALATION_STATE</columns>
    <columns>Escalation_Level__c</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>OWNER_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Loyalty</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>notEqual</operation>
    </filters>
    <label>Loyalty Cases</label>
</ListView>